[stm32l4] Configure clocks and rtimer

--- a/arch/platform/nucleo-l432kc/Makefile.nucleo-l432kc
+++ b/arch/platform/nucleo-l432kc/Makefile.nucleo-l432kc
@@ -2,6 +2,13 @@ CLEAN += *.nucleo-l432kc
 
 CFLAGS += -DSTM32L432xx
 
+ifeq ($(DEBUG), 1)
+  CFLAGS += -DFREEZE_TIMER_WHEN_DEBUGGING
+  BUILD_DIR_CONFIG = debug
+else
+  BUILD_DIR_CONFIG = release
+endif
+
 CONTIKI_TARGET_DIRS = .
 
 CONTIKI_SOURCEFILES += platform.c
